--- a/erykandroidcommon/src/main/AndroidManifest.xml
+++ b/erykandroidcommon/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="pl.edu.amu.wmi.erykandroidcommon">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
