--- a/erykandroidcommon/build.gradle
+++ b/erykandroidcommon/build.gradle
@@ -72,6 +72,12 @@ dexcount {
     orderByMethodCount = true
 }
 
+repositories {
+    maven {
+        url 'https://maven.fabric.io/public'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:3.0.1', {
@@ -117,6 +123,12 @@ dependencies {
     // timber
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'net.ypresto.timbertreeutils:timbertreeutils:1.0.0'
+    compile 'com.orhanobut:logger:2.1.1'
+
+    // crashlytics
+    compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+        transitive = true;
+    }
 
     // rx
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
