--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.1.51'
     repositories {
         mavenCentral()
         jcenter()
@@ -8,17 +9,22 @@ buildscript {
     dependencies {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         maven {
             url "https://jitpack.io"
         }
         maven {
             url "https://maven.google.com"
+        }
+        maven {
+            url 'https://maven.fabric.io/public'
         }
     }
 }
