--- a/erykandroidcommon/build.gradle
+++ b/erykandroidcommon/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.jakewharton.butterknife'
 
 buildscript {
@@ -9,8 +10,8 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.1'
+//        classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
+//        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.1'
         classpath 'me.tatarka:gradle-retrolambda:3.7.0'
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
     }
@@ -48,35 +49,30 @@ android {
 
 }
 
-apply plugin: 'com.getkeepsafe.dexcount'
+//apply plugin: 'com.getkeepsafe.dexcount'
 apply plugin: 'org.greenrobot.greendao'
-apply plugin: "org.sonarqube"
+//apply plugin: "org.sonarqube"
 apply plugin: 'me.tatarka.retrolambda'
 
-sonarqube {
-    properties {
-        property "sonar.projectName", "eryk-android-common"
+//sonarqube {
+//    properties {
+//        property "sonar.projectName", "eryk-android-common"
+//
+//        property "sonar.sourceEncoding", "UTF-8"
+//        property "sonar.sources", "src/main/java,src/main/res"
+//        property "sonar.exclusions", "build/**,**/*.png"
+//
+//        property "sonar.import_unknown_files", true
+//        property "sonar.android.lint.report", "./build/outputs/lint-results-debug.xml"
+//    }
+//}
 
-        property "sonar.sourceEncoding", "UTF-8"
-        property "sonar.sources", "src/main/java,src/main/res"
-        property "sonar.exclusions", "build/**,**/*.png"
+//dexcount {
+//    format = "list"
+//    includeFieldCount = false
+//    orderByMethodCount = true
+//}
 
-        property "sonar.import_unknown_files", true
-        property "sonar.android.lint.report", "./build/outputs/lint-results-debug.xml"
-    }
-}
-
-dexcount {
-    format = "list"
-    includeFieldCount = false
-    orderByMethodCount = true
-}
-
-repositories {
-    maven {
-        url 'https://maven.fabric.io/public'
-    }
-}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -138,6 +134,7 @@ dependencies {
     compile 'com.cantrowitz:rxbroadcast:2.0.0'
     compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
     compile 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // location
     //    compile 'com.google.android.gms:play-services-maps:9.4.0'
