--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.51'
+    ext.kotlin_version = '1.2.0-beta-88'
     repositories {
         mavenCentral()
         jcenter()
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2'
+        }
     }
     dependencies {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2'
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
+
     }
 }
+
+
 
 allprojects {
     repositories {
@@ -25,6 +32,9 @@ allprojects {
         }
         maven {
             url 'https://maven.fabric.io/public'
+        }
+        maven {
+            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2'
         }
     }
 }
