--- a/build.gradle
+++ b/build.gradle
@@ -9,14 +9,9 @@ buildscript {
         maven {
             url "https://plugins.gradle.org/m2/"
         }
-        maven {
-            url 'http://dl.bintray.com/kotlin/kotlin-eap-1.2'
-        }
     }
 
 }
-
-apply plugin: 'realm-android'
 
 kapt {
     generateStubs = true
@@ -35,6 +30,11 @@ android {
         multiDexEnabled true
     }
     buildTypes {
+
+        debug {
+            versionNameSuffix '-DEBUG'
+        }
+
         release {
             consumerProguardFiles 'proguard-rules.pro'
         }
@@ -78,65 +78,65 @@ android {
 
 dependencies {
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile 'org.mockito:mockito-core:2.11.0'
-    androidTestCompile 'com.github.fabioCollini:DaggerMock:0.8.2'
-    androidTestCompile "com.linkedin.dexmaker:dexmaker-mockito:2.2.0"
-    androidTestCompile 'com.android.support:support-annotations:26.1.0'
-    testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:shadows-multidex:3.6.1"
-    testCompile "org.robolectric:robolectric:3.6.1"
+    androidTestImplementation 'org.mockito:mockito-core:2.11.0'
+    androidTestImplementation 'com.github.fabioCollini:DaggerMock:0.8.2'
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.2.0"
+    androidTestImplementation 'com.android.support:support-annotations:26.1.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:shadows-multidex:3.6.1"
+    testImplementation "org.robolectric:robolectric:3.6.1"
     kaptTest 'com.google.dagger:dagger-compiler:2.14.1'
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.14.1'
-    provided 'javax.annotation:jsr250-api:1.0'
+    compileOnly 'javax.annotation:jsr250-api:1.0'
 
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.android.support:design:26.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    api 'com.android.support:multidex:1.0.2'
 
     //  support
-    //  compile 'com.android.support:customtabs:26.0.1'
-    //  compile 'com.android.support:animated-vector-drawable:26.0.1'
-    //  compile 'com.android.support:cardview-v7:26.0.1'
+    //  implementation 'com.android.support:customtabs:26.0.1'
+    //  implementation 'com.android.support:animated-vector-drawable:26.0.1'
+    //  implementation 'com.android.support:cardview-v7:26.0.1'
 
     //  retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    api 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    api 'com.squareup.okhttp3:okhttp:3.9.1'
 
     // di
-    compile 'com.google.dagger:dagger:2.14.1'
+    implementation 'com.google.dagger:dagger:2.14.1'
     kapt 'com.google.dagger:dagger-compiler:2.14.1'
 
     // timber
-    compile 'com.jakewharton.timber:timber:4.6.0'
-    compile 'net.ypresto.timbertreeutils:timbertreeutils:1.0.0'
-    compile 'com.orhanobut:logger:2.1.1'
+    api 'com.jakewharton.timber:timber:4.6.0'
+    implementation 'net.ypresto.timbertreeutils:timbertreeutils:1.0.0'
+    implementation 'com.orhanobut:logger:2.1.1'
 
     // crashlytics
     compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
-        transitive = true;
+        transitive = true
     }
 
     // rx
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxkotlin:2.1.0'
-    compile 'com.hadisatrio:Optional:v1.0.1'
-    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
-    compile 'com.cantrowitz:rxbroadcast:2.0.0'
-    compile 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
-    compile 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    api 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation 'com.hadisatrio:Optional:v1.0.1'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+    implementation 'com.cantrowitz:rxbroadcast:2.0.0'
+    api 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
+    implementation 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // location
-    //    compile 'com.google.android.gms:play-services-maps:9.4.0'
-    //    compile 'com.google.android.gms:play-services-location:9.4.0'
-    //    compile 'com.patloew.rxlocation:rxlocation:1.0.3'
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+    //    implementation 'com.google.android.gms:play-services-maps:9.4.0'
+    //    implementation 'com.google.android.gms:play-services-location:9.4.0'
+    //    implementation 'com.patloew.rxlocation:rxlocation:1.0.3'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 }
