--- a/build.gradle
+++ b/build.gradle
@@ -18,12 +18,12 @@ kapt {
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.2"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -84,7 +84,8 @@ dependencies {
     androidTestImplementation 'org.mockito:mockito-core:2.11.0'
     androidTestImplementation 'com.github.fabioCollini:DaggerMock:0.8.2'
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.2.0"
-    androidTestImplementation 'com.android.support:support-annotations:26.1.0'
+    androidTestImplementation 'com.android.support:support-annotations:27.0.2'
+
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:shadows-multidex:3.6.1"
     testImplementation "org.robolectric:robolectric:3.6.1"
@@ -92,16 +93,18 @@ dependencies {
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.14.1'
     compileOnly 'javax.annotation:jsr250-api:1.0'
 
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    api 'com.android.support:design:26.1.0'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    // support
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
+    api 'com.android.support:support-v4:27.0.2'
+    api 'com.android.support:design:27.0.2'
     api 'com.android.support:multidex:1.0.2'
 
     //  support
     //  implementation 'com.android.support:customtabs:26.0.1'
     //  implementation 'com.android.support:animated-vector-drawable:26.0.1'
     //  implementation 'com.android.support:cardview-v7:26.0.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     //  retrofit
     api 'com.squareup.retrofit2:retrofit:2.3.0'
