--- a/build.gradle
+++ b/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     // support
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:appcompat-v7:27.0.2'
-    api 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
     api 'com.android.support:design:27.0.2'
     api 'com.android.support:multidex:1.0.2'
 
@@ -111,7 +111,7 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-    api 'com.squareup.okhttp3:okhttp:3.9.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
 
     // di
     implementation 'com.google.dagger:dagger:2.14.1'
@@ -123,13 +123,13 @@ dependencies {
     implementation 'com.orhanobut:logger:2.1.1'
 
     // crashlytics
-    compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
         transitive = true
     }
 
     // rx
-    api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    api 'io.reactivex.rxjava2:rxkotlin:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     implementation 'com.hadisatrio:Optional:v1.0.1'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
     implementation 'com.cantrowitz:rxbroadcast:2.0.0'
