--- a/build.gradle
+++ b/build.gradle
@@ -13,19 +13,15 @@ buildscript {
 
 }
 
-kapt {
-    generateStubs = true
-}
-
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.2"
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 4
-        versionName "1.12"
+        versionCode 5
+        versionName "1.13"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -56,17 +52,19 @@ android {
 dependencies {
 
     kaptAndroidTest 'com.google.dagger:dagger-compiler:2.14.1'
-        compileOnly 'javax.annotation:jsr250-api:1.0'
+    compileOnly 'javax.annotation:jsr250-api:1.0'
 
     // support
-    implementation 'com.android.support:recyclerview-v7:27.0.2'
-    implementation 'com.android.support:appcompat-v7:27.0.2'
-    implementation 'com.android.support:support-v4:27.0.2'
-    api 'com.android.support:design:27.0.2'
-    api 'com.android.support:multidex:1.0.2'
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:exifinterface:27.1.1'
+    api 'com.android.support:cardview-v7:27.1.1'
+    api 'com.android.support:design:27.1.1'
+    api 'com.android.support:appcompat-v7:27.1.1'
+
+    api 'com.android.support:multidex:1.0.3'
 
     //  support
-    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //  retrofit
     api 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -93,7 +91,7 @@ dependencies {
     api 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.1.0'
     api 'com.f2prateek.rx.preferences2:rx-preferences:2.0.0-RC3'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
