--- a/build.gradle
+++ b/build.gradle
@@ -83,7 +83,7 @@ dependencies {
     implementation 'com.orhanobut:logger:2.1.1'
 
     // crashlytics
-    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+    api('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
         transitive = true
     }
 
